# aind-vr-foraging-primary-qc

./: README.md
.codeocean/: datasets.json  environment.json
code/: qc_exporter.py  run_capsule.py
environment/: Dockerfile  pyproject.toml
