[project]
name = "aind-vr-foraging-primary-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aind-behavior-vr-foraging",
    "contraqctor",
    "aind-data-schema<2.0",
    "aind-data-schema-models>=0.7.5",
    "pydantic-settings>=2.10.1",
]
