[project]
name = "aind-vr-foraging-primary-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aind-behavior-vr-foraging",
    "aind-data-schema>=2.0",
    "pydantic-settings>=2.10.1",
    "contraqctor>=0.5.3"
]

[dependency-groups]

dev = ["ruff"]

[tool.uv]
default-groups = ['dev']
required-version = '>=0.8.4'
